--- a/index.html
+++ b/index.html
@@ -226,6 +226,6 @@
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script src="aos-init.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-<script src="modernizr.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 <script src="https://unpkg.com/vh-check/dist/vh-check.min.js"></script>
 <script src="index.js"></script>
