changed css and js name because of caching

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link href="style.css" rel="stylesheet">
+    <link href="style-1.0.css" rel="stylesheet">
   </head>
  <body>
    <header>
@@ -126,7 +126,7 @@
           <h2>Projects</h2>
         </div>
         <p style="color: #444; font-size: 0.9em; line-height: 1.8em;">
-          Some of the larger projects that I've worked with during the last couple of years.
+          Some of the larger projects that I've worked on during the last couple of years.
         </p>
       </div>
 
@@ -143,7 +143,7 @@
               </div>
               <div class="projectInfo">
                 <h2 style="margin-bottom: 10px;">Eat A Beat</h2>
-                <p style="line-height: 1.6em; color: #444;">A 2D game generated from a song, powered by Spotify. This project won 1st place on Spotify DevX Hackathon 2018.</p>
+                <p style="line-height: 1.6em; color: #444;">A 2D game generated from any track, powered by the Spotify API/SDK. This project won 1st place on Spotify DevX Hackathon 2018.</p>
               </div>
               <div>
                 <a href="https://eatabeat.herokuapp.com/" class="linkButton" target="_blank">View</a>
@@ -226,6 +226,6 @@
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script src="aos-init.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+<script src="modernizr.js"></script>
 <script src="https://unpkg.com/vh-check/dist/vh-check.min.js"></script>
-<script src="index.js"></script>
+<script src="index-1.0.js"></script>
