--- a/index.html
+++ b/index.html
@@ -12,213 +12,227 @@
     <meta name="msapplication-TileColor" content="#018bfa">
     <meta name="theme-color" content="#ffffff">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,700,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link href="style-1.0.css" rel="stylesheet">
+    <link href="style-1.2.css" rel="stylesheet">
   </head>
  <body>
-   <header>
-     <h2 id="title" class="animated fadeInUp" style="animation-delay: 0.2s;">iman radjavi<span id="colorAccent">.</span></h2>
-     <nav class="animated fadeInUp" style="animation-delay: 0.2s;">
-        <ul id="topnav">
-          <li>
-            <a href="mailto:radjavi@hotmail.com" target="_blank">
-              <span style="font-size: 1.4em;">
-                <i class="fas fa-at"></i>
-              </span>
-            </a>
-          </li>
-          <li>
-            <a href="https://www.linkedin.com/in/iman-radjavi/" target="_blank">
-              <span style="font-size: 1.4em;">
-                <i class="fab fa-linkedin"></i>
-              </span>
-            </a>
-          </li>
-          <li>
-            <a href="https://github.com/radjavi" target="_blank">
-              <span style="font-size: 1.4em;">
-                <i class="fab fa-github"></i>
-              </span>
-            </a>
-          </li>
-          <li id="menu" class="noSelect">
-            <div class="bar1"></div>
-            <div class="bar2"></div>
-            <div class="bar3"></div>
-          </li>
-        </ul>
-      </nav>
-    </header>
 
-    <div class="menu-overlay">
-      <div id="menu-list">
-        <div id="menu-item1" class="animated bounceIn">
-          <a class="menu-link" href="mailto:radjavi@hotmail.com" target="_blank">
-            <span style="font-size: 1.4em;">
-              <i class="fas fa-at"></i>
-            </span>
-            <p class="menu-link-text">
-              radjavi@hotmail.com
-            </p>
-          </a>
-        </div>
-        <div id="menu-item2" class="animated bounceIn">
-          <a class="menu-link" href="https://www.linkedin.com/in/iman-radjavi/" target="_blank">
-            <span style="font-size: 1.4em;">
-              <i class="fab fa-linkedin"></i>
-            </span>
-            <p class="menu-link-text">
-              /iman-radjavi
-            </p>
-          </a>
-        </div>
-        <div id="menu-item3" class="animated bounceIn">
-          <a class="menu-link" href="https://github.com/radjavi" target="_blank">
-            <span style="font-size: 1.4em;">
-              <i class="fab fa-github"></i>
-            </span>
-            <p class="menu-link-text">
-              /radjavi
-            </p>
-          </a>
-        </div>
-      </div>
+   <div id="topContent">
+     <div id="topContentBox" class="smallBody">
+       <header>
+         <h2 id="title" class="animated fadeInUp" style="animation-delay: 0.2s;">iman radjavi.</h2>
+         <nav class="animated fadeInUp" style="animation-delay: 0.2s;">
+            <ul id="topnav">
+              <li>
+                <a href="mailto:radjavi@hotmail.com" target="_blank">
+                  <span class="iconSpan">
+                    <i class="fas fa-at"></i>
+                  </span>
+                </a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/in/iman-radjavi/" target="_blank">
+                  <span class="iconSpan">
+                    <i class="fab fa-linkedin"></i>
+                  </span>
+                </a>
+              </li>
+              <li>
+                <a href="https://github.com/radjavi" target="_blank">
+                  <span class="iconSpan">
+                    <i class="fab fa-github"></i>
+                  </span>
+                </a>
+              </li>
+              <li id="menu" class="noSelect">
+                <div class="bar1"></div>
+                <div class="bar2"></div>
+                <div class="bar3"></div>
+              </li>
+            </ul>
+          </nav>
+        </header>
 
-      <div id="menu-footer" class="animated fadeIn">
-        <div style="display: flex; align-items: center; margin-bottom: 8px;">
-          <p style="font-size: 0.9em;">
-            <i class="fas fa-pen" style="color: #000; margin: 0 3px;"></i>
-            with
-            <i class="fas fa-heart" style="color: #f00; margin: 0 3px;"></i>
-            by
+        <div class="menu-overlay">
+          <div id="menu-list">
+            <div id="menu-item1" class="animated bounceIn">
+              <a class="menu-link" href="mailto:radjavi@hotmail.com" target="_blank">
+                <span style="font-size: 1.4em;">
+                  <i class="fas fa-at"></i>
+                </span>
+                <p class="menu-link-text">
+                  radjavi@hotmail.com
+                </p>
+              </a>
+            </div>
+            <div id="menu-item2" class="animated bounceIn">
+              <a class="menu-link" href="https://www.linkedin.com/in/iman-radjavi/" target="_blank">
+                <span style="font-size: 1.4em;">
+                  <i class="fab fa-linkedin"></i>
+                </span>
+                <p class="menu-link-text">
+                  /iman-radjavi
+                </p>
+              </a>
+            </div>
+            <div id="menu-item3" class="animated bounceIn">
+              <a class="menu-link" href="https://github.com/radjavi" target="_blank">
+                <span style="font-size: 1.4em;">
+                  <i class="fab fa-github"></i>
+                </span>
+                <p class="menu-link-text">
+                  /radjavi
+                </p>
+              </a>
+            </div>
+          </div>
+
+          <div id="menu-footer" class="animated fadeIn">
+            <div style="display: flex; align-items: center; margin-bottom: 12px;">
+              <p style="font-size: 0.9em;">
+                <i class="fas fa-pen" style="margin: 0 3px;"></i>
+                with
+                <i class="fas fa-heart" style="color: #f00; margin: 0 3px;"></i>
+              </p>
+            </div>
+            <p id="footerBy" style="font-size: 0.9em;">
+              Copyright &copy;
+              <script type="text/javascript">
+                document.write(new Date().getFullYear());
+              </script>
+              Iman Radjavi
+            </p>
+          </div>
+        </div>
+
+        <div id="welcome">
+          <div id="intro">
+            <h3 id="hi" class="animated fadeInUp">HEY THERE! 👋</h3>
+            <h1 id="myNameIs" class="animated fadeInUp">My name is Iman and I'm a student in Computer Science & Engineering</h1>
+          </div>
+          <p id="studying" class="animated fadeInUp">
+            I'm currently studying my third year at <span style="font-weight: 800;">Chalmers University of Technology</span> in Gothenburg, Sweden.
+            On my spare time I work with fun projects to learn new technologies.
           </p>
-          <span style="color: #000; font-weight: 700; font-size: 1.2em; margin: 0 0 2px 6px;">r<span id="colorAccent">.</span></span>
         </div>
-        <p id="footerBy" style="font-size: 0.9em;">
-          Copyright &copy;
-          <script type="text/javascript">
-            document.write(new Date().getFullYear());
-          </script>
-          Iman Radjavi
-        </p>
-      </div>
-    </div>
+     </div>
+
+     <svg id="shapeDivider" version="1.1" class="shapeDivider" style="z-index: 1200;" x="0px" y="0px" viewBox="0 0 240 24" enable-background="new 0 0 240 24" xml:space="preserve" preserveAspectRatio="none"> <path fill="#ffffff" fill-opacity="0.33" d="M240,24V0c-51.797,0-69.883,13.18-94.707,15.59c-24.691,2.4-43.872-1.17-63.765-1.08
+     c-19.17,0.1-31.196,3.65-51.309,6.58C15.552,23.21,4.321,22.471,0,22.01V24H240z"></path> <path fill="#ffffff" fill-opacity="0.33" d="M240,24V2.21c-51.797,0-69.883,11.96-94.707,14.16
+     c-24.691,2.149-43.872-1.08-63.765-1.021c-19.17,0.069-31.196,3.311-51.309,5.971C15.552,23.23,4.321,22.58,0,22.189V24h239.766H240
+     z"></path> <path fill="#ffffff" d="M240,24V3.72c-51.797,0-69.883,11.64-94.707,14.021c-24.691,2.359-43.872-3.25-63.765-3.17
+     c-19.17,0.109-31.196,3.6-51.309,6.529C15.552,23.209,4.321,22.47,0,22.029V24H240z"></path> </svg>
+
+   </div>
+
 
    <div id="content">
-    <div id="welcome">
-      <div id="intro">
-        <h1 id="hi" class="animated fadeInUp">Hi there!</h1>
-        <h1 id="myNameIs" class="animated fadeInUp">My name is Iman and I'm a student in <span class="gradientTextBlue">Computer Science & Engineering.</span></h1>
+     <div class="smallBody">
+      <div id="projects" class="animated fadeIn" style="animation-delay: 0.5s; animation-duration: 1.5s;">
+        <div id="projectIntro" style="margin-bottom: 50px;">
+          <h2 data-aos="fade-up">Projects</h2>
+          <p style="color: #444; font-size: 0.9em; line-height: 1.8em; margin-top: 8px;" data-aos="fade-up">
+            Some of the larger projects that I've worked on during the last couple of years.
+          </p>
+        </div>
+
+        <div id="flexprojects">
+          <div class="card" data-aos="fade-up">
+            <div class="project1image" style="background-color: #FFC858; background-image: none; position:relative;">
+              <div id="eatabeat" style="width:100%; height: 100%; position: absolute;"></div>
+              <img id="img-eatabeat" src="assets/eatabeat-logo.svg">
+            </div>
+            <div class="project1text">
+              <div class="projectTextBlock">
+                <div class="projectIcon">
+                  <i class="fas fa-gamepad"></i>
+                </div>
+                <div class="projectInfo">
+                  <h2 style="margin-bottom: 10px;">Eat A Beat</h2>
+                  <p style="line-height: 1.6em; color: #444;">A 2D game generated from any track, powered by the Spotify API/SDK. This project won 1st place on Spotify DevX Hackathon 2018.</p>
+                </div>
+                <div>
+                  <a href="https://eatabeat.herokuapp.com/" class="linkButton" target="_blank">View</a>
+                  <a href="https://github.com/SimonTakman/EatABeat" class="link" target="_blank">Source</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="card" data-aos="fade-up">
+            <div class="project2text">
+              <div class="projectTextBlock">
+                <div class="projectIcon" style="font-size: 1.5em;">
+                  <i class="fab fa-android"></i>
+                </div>
+                <div class="projectInfo">
+                  <h2 style="margin-bottom: 10px;">Smart Home</h2>
+                  <p style="line-height: 1.6em; color: #444;">
+                    Using Google Firebase, I have connected my Raspberry Pi 3 and my Android app to a database
+                    to control my home.
+                  </p>
+                </div>
+                <div>
+                  <a href="https://github.com/radjavi/smarthome" class="link" target="_blank">Source</a>
+                </div>
+              </div>
+            </div>
+            <div class="project2image">
+              <img id="img-smarthome" src="assets/smarthome.png">
+            </div>
+          </div>
+
+          <div class="card" data-aos="fade-up">
+            <div class="project1image" style="background-color: #FBAB7E; background-image: linear-gradient(135deg, #FBAB7E 0%, #F7CE68 100%);">
+              <img id="img-cetac" src="assets/cetac-white.svg">
+            </div>
+            <div class="project1text">
+              <div class="projectTextBlock">
+                <div class="projectIcon" style="font-size: 1.5em;">
+                  <i class="fab fa-wordpress"></i>
+                </div>
+                <div class="projectInfo">
+                  <h2 style="margin-bottom: 10px;">CETAC</h2>
+                  <p style="line-height: 1.6em; color: #444;">Created a brand new website for the student organization CETAC using Wordpress.</p>
+                </div>
+                <div>
+                  <a href="https://cetac.se/" class="linkButton" target="_blank">View</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
-      <p id="studying" class="animated fadeInUp">
-        I'm currently studying my third year at <span id="colorAccent">Chalmers University of Technology</span> in Gothenburg, Sweden.
-        On my spare time I work with fun projects to learn new technologies.
-      </p>
+
+      <span class="spacing" id="footerSpacing"></span>
     </div>
 
-    <span class="spacing"></span>
-
-    <div id="projects" class="animated fadeIn" style="animation-delay: 0.5s; animation-duration: 1.5s;">
-      <div id="projectIntro" data-aos="fade-up" style="margin-bottom: 50px;">
-        <div id="intro">
-          <h2>Projects</h2>
-        </div>
-        <p style="color: #444; font-size: 0.9em; line-height: 1.8em;">
-          Some of the larger projects that I've worked on during the last couple of years.
-        </p>
+    <div id="footerBack">
+      <div class="smallBody" style="padding-top: 0;">
+        <footer class="animated fadeInUp" style="animation-delay: 0.2s;">
+          <p id="footerCopyright" style="font-size: 0.9em;">
+            Copyright &copy;
+            <script type="text/javascript">
+              document.write(new Date().getFullYear());
+            </script>
+            Iman Radjavi
+          </p>
+          <div id="footerBy" style="display: flex; align-items: center; align-content: center;">
+            <p style="font-size: 0.9em;">
+              <i class="fas fa-pen" style="color: #000; margin: 0 3px;"></i>
+              with
+              <i class="fas fa-heart" style="color: #f00; margin: 0 3px;"></i>
+              by
+            </p>
+            <span style="color: #000; font-weight: 700; font-size: 1.2em; margin-left: 6px;">r<span class="colorAccent">.</span></span>
+          </div>
+        </footer>
       </div>
-
-      <div id="flexprojects">
-        <div class="card" data-aos="fade-up">
-          <div class="project1image" style="background-color: #FFC858; background-image: none; position:relative;">
-            <div id="eatabeat" style="width:100%; height: 100%; position: absolute;"></div>
-            <img id="img-eatabeat" src="assets/eatabeat-logo.svg">
-          </div>
-          <div class="project1text">
-            <div class="projectTextBlock">
-              <div class="projectIcon">
-                <i class="fas fa-gamepad"></i>
-              </div>
-              <div class="projectInfo">
-                <h2 style="margin-bottom: 10px;">Eat A Beat</h2>
-                <p style="line-height: 1.6em; color: #444;">A 2D game generated from any track, powered by the Spotify API/SDK. This project won 1st place on Spotify DevX Hackathon 2018.</p>
-              </div>
-              <div>
-                <a href="https://eatabeat.herokuapp.com/" class="linkButton" target="_blank">View</a>
-                <a href="https://github.com/SimonTakman/EatABeat" class="link" target="_blank">Source</a>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="card" data-aos="fade-up">
-          <div class="project2text">
-            <div class="projectTextBlock">
-              <div class="projectIcon" style="font-size: 1.5em;">
-                <i class="fab fa-android"></i>
-              </div>
-              <div class="projectInfo">
-                <h2 style="margin-bottom: 10px;">Smart Home</h2>
-                <p style="line-height: 1.6em; color: #444;">
-                  Using Google Firebase, I have connected my Raspberry Pi 3 and my Android app to a database
-                  to control my home.
-                </p>
-              </div>
-              <div>
-                <a href="https://github.com/radjavi/smarthome" class="linkButton" target="_blank">Source</a>
-              </div>
-            </div>
-          </div>
-          <div class="project2image">
-            <img id="img-smarthome" src="assets/smarthome.png">
-          </div>
-        </div>
-
-        <div class="card" data-aos="fade-up">
-          <div class="project1image" style="background-color: #FBAB7E; background-image: linear-gradient(135deg, #FBAB7E 0%, #F7CE68 100%);">
-            <img id="img-cetac" src="assets/cetac-white.svg">
-          </div>
-          <div class="project1text">
-            <div class="projectTextBlock">
-              <div class="projectIcon" style="font-size: 1.5em;">
-                <i class="fab fa-wordpress"></i>
-              </div>
-              <div class="projectInfo">
-                <h2 style="margin-bottom: 10px;">CETAC</h2>
-                <p style="line-height: 1.6em; color: #444;">Created a brand new website for the student organization CETAC using Wordpress.</p>
-              </div>
-              <div>
-                <a href="https://cetac.se/" class="linkButton" target="_blank">View</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-
     </div>
-
-    <span class="spacing" id="footerSpacing"></span>
-
-    <footer class="animated fadeInUp" style="animation-delay: 0.2s;">
-      <p id="footerCopyright" style="font-size: 0.9em;">
-        Copyright &copy;
-        <script type="text/javascript">
-          document.write(new Date().getFullYear());
-        </script>
-        Iman Radjavi
-      </p>
-      <div id="footerBy" style="display: flex; align-items: center; align-content: center;">
-        <p style="font-size: 0.9em;">
-          <i class="fas fa-pen" style="color: #000; margin: 0 3px;"></i>
-          with
-          <i class="fas fa-heart" style="color: #f00; margin: 0 3px;"></i>
-          by
-        </p>
-        <span style="color: #000; font-weight: 700; font-size: 1.2em; margin-left: 6px;">r<span id="colorAccent">.</span></span>
-      </div>
-    </footer>
   </div>
  </body>
 </html>
@@ -228,4 +242,4 @@
 <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
 <script src="modernizr.js"></script>
 <script src="https://unpkg.com/vh-check/dist/vh-check.min.js"></script>
-<script src="index-1.0.js"></script>
+<script src="index-1.1.js"></script>
