finished new design - 1.1

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Iman Radjavi | Computer Science & Engineering</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="manifest" href="site.webmanifest">
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#018bfa">
-    <meta name="msapplication-TileColor" content="#018bfa">
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=1.1">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png?v=1.1">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png?v=1.1">
+    <link rel="manifest" href="site.webmanifest?v=1.1">
+    <link rel="mask-icon" href="safari-pinned-tab.svg?v=1.1" color="#5bbad5">
+    <link rel="shortcut icon" href="favicon.ico?v=1.1">
+    <meta name="msapplication-TileColor" content="#15142f">
     <meta name="theme-color" content="#ffffff">
     <link href="https://fonts.googleapis.com/css?family=Fira+Sans:300,400,700,800" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700,800,900" rel="stylesheet">
@@ -154,8 +155,9 @@
                   <h2 style="margin-bottom: 10px;">Eat A Beat</h2>
                   <p style="line-height: 1.6em; color: #444;">A 2D game generated from any track, powered by the Spotify API/SDK. This project won 1st place on Spotify DevX Hackathon 2018.</p>
                 </div>
-                <div>
+                <div id="eatabeat-buttons">
                   <a href="https://eatabeat.herokuapp.com/" class="linkButton" target="_blank">View</a>
+                  <span style="width: 15px; height: 10px;"></span>
                   <a href="https://github.com/SimonTakman/EatABeat" class="link" target="_blank">Source</a>
                 </div>
               </div>
